--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
     "eslint-config-airbnb": "^19.0.4",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "typescript": "^5.3.3",
     "web-vitals": "^3.5.2"
   },
